--- a/bkmonitor/webpack/src/monitor-pc/pages/query-template/query-template.scss
+++ b/bkmonitor/webpack/src/monitor-pc/pages/query-template/query-template.scss
@@ -3,4 +3,28 @@
   flex-direction: column;
   width: 100%;
   height: 100%;
+  padding: 16px 18px 16px 16px;
+  background-color: #fff;
+  background-clip: content-box;
+  border-radius: 2px;
+  box-shadow: 0 2px 4px 0 #1919290d;
+
+  .query-template-header {
+    display: flex;
+    flex-shrink: 0;
+    align-items: center;
+    justify-content: space-between;
+    height: 64px;
+    padding: 0 16px;
+
+    .search-input {
+      width: 480px;
+    }
+  }
+
+  .query-template-main {
+    flex-grow: 1;
+    min-height: 0;
+    padding: 0 16px;
+  }
 }
