--- a/bkmonitor/webpack/src/monitor-pc/pages/query-template/create/template-create.scss
+++ b/bkmonitor/webpack/src/monitor-pc/pages/query-template/create/template-create.scss
@@ -3,4 +3,93 @@
   flex-direction: column;
   width: 100%;
   height: 100%;
+
+  .template-create-nav {
+    display: flex;
+    align-items: center;
+    height: 52px;
+    background: #fff;
+    box-shadow: 0 3px 4px 0 #0000000a;
+
+    .navigation-bar-back {
+      margin-left: 10px;
+    }
+
+    .title {
+      font-size: 16px;
+      color: #313238;
+    }
+
+    .template-steps {
+      max-width: 338px;
+      margin: 0 auto;
+
+      .bk-step {
+        .bk-step-number {
+          color: #4d4f56;
+          background: #eaebf0;
+          border: none;
+        }
+
+        &.current {
+          .bk-step-number {
+            color: #fff;
+            background-color: #3a84ff;
+            border-color: #3a84ff;
+          }
+        }
+
+        &.done {
+          .bk-step-number {
+            color: #3a84ff;
+            background: #e1ecff;
+            border: none;
+          }
+        }
+      }
+    }
+  }
+
+  .template-create-content {
+    display: flex;
+    height: calc(100% - 52px);
+
+    .title {
+      font-size: 14px;
+      font-weight: 600;
+      color: #313238;
+    }
+
+    .create-content-wrap {
+      position: relative;
+      flex: 1;
+      height: 100%;
+      overflow-y: auto;
+
+      .create-config {
+        padding: 16px 16px 0;
+      }
+
+      .submit-btns {
+        padding: 0 16px;
+        margin-top: 32px;
+
+        &.sticky {
+          position: sticky;
+          bottom: 0;
+          padding: 8px 16px;
+          background: #fff;
+          box-shadow: 0 -2px 4px 0 #0000001f;
+        }
+
+        .bk-button {
+          width: 88px;
+
+          & + .bk-button {
+            margin-left: 8px;
+          }
+        }
+      }
+    }
+  }
 }
