feat: 查询模版配置开发 (#7473)

--- a/bkmonitor/webpack/src/monitor-pc/pages/query-template/components/template-config/template-config.scss
+++ b/bkmonitor/webpack/src/monitor-pc/pages/query-template/components/template-config/template-config.scss
@@ -1,8 +1,6 @@
 .template-config-wrap-component {
-  width: 968px;
-  height: 513px;
   padding: 24px;
-  margin: auto;
+  margin-top: 12px;
   background: #FFF;
   border-radius: 2px;
   box-shadow: 0 2px 4px 0 #1919290d;
