--- a/bkmonitor/webpack/src/monitor-pc/pages/query-template/components/utils/select-wrap.scss
+++ b/bkmonitor/webpack/src/monitor-pc/pages/query-template/components/utils/select-wrap.scss
@@ -1,4 +1,5 @@
 .template-config-utils-select-wrap-component {
+  position: relative;
   display: flex;
   flex: 1;
   align-items: center;
@@ -6,6 +7,13 @@
   padding: 0 0 0 6px;
   cursor: pointer;
   background: #FDF4E8;
+
+  .slot-wrap {
+    display: flex;
+    flex: 1;
+    align-items: center;
+    height: 100%;
+  }
 
   .expand-wrap {
     display: flex;
@@ -26,5 +34,14 @@
         transform: rotate(180deg);
       }
     }
+  }
+
+  .select-loading {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: #fff;
   }
 }
