【需求】告警分派能力优化 --Story=121568253

--- a/bkmonitor/webpack/src/monitor-pc/pages/alarm-dispatch/components/debugging-result.scss
+++ b/bkmonitor/webpack/src/monitor-pc/pages/alarm-dispatch/components/debugging-result.scss
@@ -21,6 +21,10 @@ $statusColors: #ea3635 #ff9c00 #699df4;
     min-height: calc(100vh - 120px);
     padding: 20px 40px;
 
+    .content-tips {
+      color: #ea3636;
+    }
+
     .expand-item {
       margin-top: 16px;
 
