feat: 重构任务状态组件

--- a/bklog/web/src/views/manage-v2/log-extract/extract-task/task-list/index.scss
+++ b/bklog/web/src/views/manage-v2/log-extract/extract-task/task-list/index.scss
@@ -92,6 +92,18 @@
     line-height: 40px;
     color: #63656e;
 
+    .icon-check-circle {
+      color: #2dcb56;
+    }
+
+    .icon-close-circle {
+      color: #ea3636;
+    }
+
+    .bk-icon {
+      margin-right: 3px;
+    }
+
     .list-title {
       display: flex;
       align-items: center;
