feat: 修复download组件中alert左侧图标间距样式

--- a/bklog/web/src/views/manage-v2/log-extract/extract-task/task-list/index.scss
+++ b/bklog/web/src/views/manage-v2/log-extract/extract-task/task-list/index.scss
@@ -104,6 +104,12 @@
       margin-right: 3px;
     }
 
+    .bk-alert {
+      .icon-info{
+        margin-right: 8px;
+      }
+    }
+
     .list-title {
       display: flex;
       align-items: center;
