--- a/bkmonitor/webpack/src/monitor-pc/pages/query-template/components/method/method-creator.scss
+++ b/bkmonitor/webpack/src/monitor-pc/pages/query-template/components/method/method-creator.scss
@@ -19,4 +19,29 @@
     font-size: 12px;
     color: #313238;
   }
+  
+}
+
+.template-method-creator-component-options-popover {
+  max-height: 232px;
+  padding: 4px 0;
+  overflow: scroll;
+
+  .options-item {
+    display: flex;
+    align-items: center;
+    width: 127px;
+    height: 32px;
+    cursor: pointer;
+
+    &:hover {
+      background: #F5F7FA;
+    }
+
+    .options-item-name {
+      margin-left: 12px;
+      font-size: 12px;
+      color: #4D4F56;
+    }
+  }
 }
