Revert "feat: Trace详情 AI 小鲸功能 --Story=126197331 (#7348)"
This reverts commit 6139508d79a10d1f6bcdc780e09fb43b9b6ecb8f.

--- a/bkmonitor/webpack/src/trace/pages/main/span-details.scss
+++ b/bkmonitor/webpack/src/trace/pages/main/span-details.scss
@@ -55,58 +55,57 @@
       align-items: center;
 
       .sideslider-title {
-        display: flex;
-        align-items: center;
-        min-width: 230px;
-        overflow: hidden;
-        text-overflow: ellipsis;
-        line-height: 20px;
-        white-space: nowrap;
+          display: flex;
+          align-items: center;
+          width: 230px;
+          overflow: hidden;
+          text-overflow: ellipsis;
+          white-space: nowrap;
 
-        .status {
-          position: relative;
-          display: inline-block;
-          width: 13px;
-          height: 13px;
-          margin: 0 4.5px;
-          border-radius: 50%;
-
-          &::after {
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            width: 7px;
-            height: 7px;
-            content: '';
+          .status {
+            position: relative;
+            display: inline-block;
+            width: 13px;
+            height: 13px;
+            margin: 0 4.5px;
             border-radius: 50%;
-            transform: translate(-50%, -50%);
-          }
-
-          &.warning {
-            background-color: #fff1db;
 
             &::after {
-              background-color: #fe9c00;
+              position: absolute;
+              top: 50%;
+              left: 50%;
+              width: 7px;
+              height: 7px;
+              content: '';
+              border-radius: 50%;
+              transform: translate(-50%, -50%);
             }
-          }
 
-          &.normal {
-            background-color: #3fc06d29;
+            &.warning {
+              background-color: #fff1db;
 
-            &::after {
-              background-color: #3fc06d;
+              &::after {
+                background-color: #fe9c00;
+              }
             }
-          }
 
-          &.failed {
-            background: #ffebeb;
+            &.normal {
+              background-color: #3fc06d29;
 
-            &::after {
-              background-color: #ea3636;
+              &::after {
+                background-color: #3fc06d;
+              }
+            }
+
+            &.failed {
+              background: #ffebeb;
+
+              &::after {
+                background-color: #ea3636;
+              }
             }
           }
         }
-      }
     }
 
     .arrow-wrap {
@@ -121,7 +120,7 @@
 
       &:first-of-type {
         margin-right: 4px;
-        margin-left: 4px;
+        margin-left: 16px;
       }
 
       &.disabled {
@@ -262,7 +261,6 @@
       display: flex;
       align-items: center;
       justify-content: center;
-
       // height: 26px;
       // padding: 0 7px;
       // font-size: 12px;
@@ -365,7 +363,7 @@
             position: unset;
             display: unset;
             margin-right: 4px;
-            margin-left: 0;
+            margin-left: 0px;
           }
 
           &:hover {
@@ -380,7 +378,6 @@
 
   .content-list {
     box-sizing: border-box;
-
     // margin-top: 24px;
     height: calc(100% - 112px);
     padding: 0 16px 14px;
@@ -392,8 +389,8 @@
 
       &:hover {
         box-shadow:
-          0 2px 4px 0 rgb(25 25 41 / 5%),
-          0 2px 4px 0 rgb(0 0 0 / 10%);
+          0 2px 4px 0 rgba(25, 25, 41, 0.05),
+          0 2px 4px 0 rgba(0, 0, 0, 0.1);
       }
 
       .chart-legend {
@@ -422,31 +419,22 @@
       .bklog-result-container.has-scroll-x .bklog-row-box .bklog-row-container .expand-view-wrapper::after {
         display: none;
       }
-
       .bk-nested-loading {
         height: 100%;
-
         & > div {
           height: 100%;
-
           .dashboard-panel {
             height: 100%;
-
             .flex-dashboard {
               height: 100%;
-
               .flex-dashboard-item {
                 height: 100%;
-
                 .monitor-trace-log {
                   padding: 0;
-
                   .v3-bklog-root {
                     background: #fff;
-
                     .v3-bklog-content {
                       padding: 0;
-
                       .v3-bklog-container {
                         margin-top: 0;
                       }
@@ -496,7 +484,7 @@
       .expan-item-title {
         margin-left: 6px;
         font-size: 14px;
-        font-weight: bold;
+        font-weight: Bold;
         color: #313238;
       }
 
@@ -512,7 +500,7 @@
 
         .red-bold {
           font-size: 14px;
-          font-weight: bold;
+          font-weight: Bold;
           color: #ea3636;
         }
 
@@ -534,7 +522,7 @@
 
       &.active {
         height: auto;
-        padding: 0 24px 14px;
+        padding: 0 24px 14px 24px;
       }
 
       /* kv结构 */
@@ -559,13 +547,13 @@
               line-height: 16px;
               color: #fff;
               background: #c4c6cc;
-              border-radius: 0 0 6px;
+              border-radius: 0 0 6px 0;
             }
 
             .content {
               margin: 0 0 8px 12px;
               font-size: 12px;
-              font-weight: bold;
+              font-weight: Bold;
               line-height: 20px;
               color: #63656e;
 
@@ -576,7 +564,7 @@
                 width: 13px;
                 height: 13px;
                 margin-right: 6px;
-                background: rgb(234 54 54 / 16%);
+                background: rgba(234, 54, 54, 0.16);
                 border-radius: 50%;
 
                 .red-point {
@@ -635,7 +623,7 @@
               .center-text {
                 margin: 0 6px;
                 font-size: 12px;
-                font-weight: bold;
+                font-weight: Bold;
                 color: #63656e;
               }
 
@@ -683,7 +671,7 @@
             .center {
               margin: 2px 0;
               font-size: 12px;
-              font-weight: bold;
+              font-weight: Bold;
               color: #63656e;
             }
 
@@ -772,7 +760,7 @@
         overflow: hidden;
         text-overflow: ellipsis;
         font-size: 12px;
-        font-weight: bold;
+        font-weight: Bold;
         color: #63656e;
         white-space: nowrap;
       }
@@ -805,7 +793,6 @@
   .json-text-style {
     position: relative;
     margin-top: 12px;
-
     @extend %json-style;
 
     .json-head {
@@ -909,8 +896,8 @@
 
       .format-button {
         position: absolute;
-        top: 0;
-        right: 0;
+        top: 0px;
+        right: 0px;
         z-index: 1;
         display: none;
         height: 22px;
