--- a/bklog/web/src/views/retrieve-v2/field-filter-comp/field-analysis.scss
+++ b/bklog/web/src/views/retrieve-v2/field-filter-comp/field-analysis.scss
@@ -1,9 +1,9 @@
 @import '@/scss/mixins/flex.scss';
 
 .retrieve-v2.field-analysis-container {
-  width: 480px;
+  width: 520px;
   min-height: 395px;
-  padding: 6px 16px 10px;
+  padding: 6px 12px 10px;
   overflow: auto;
   font-size: 12px;
   color: #63656e;
@@ -86,16 +86,18 @@
     }
   }
 
-  .moreDistinct {
+  .more-distinct {
     display: inline-block;
-    margin-top: 8px;
-    margin-left: 52px;
     color: #3a84ff;
     cursor: pointer;
+    margin-right: 4px;
+    font-size: 12px;
   }
 
-  .moreFn {
-    .fnBtn {
+  .more-fn {
+    display: flex;
+    align-items: center;
+    .fn-btn {
       margin-left: 8px;
       color: #4d4f56;
       cursor: pointer;
