feat: 查询模版配置开发

--- a/bkmonitor/webpack/src/monitor-pc/pages/query-template/components/utils/variable-name-input.scss
+++ b/bkmonitor/webpack/src/monitor-pc/pages/query-template/components/utils/variable-name-input.scss
@@ -35,6 +35,7 @@
         height: 30px;
         font-weight: 700;
         color: #E54488;
+        background: #FEF9FB;
         border: none;
       }
     }
