feat: 查询模版配置开发

--- a/bkmonitor/webpack/src/monitor-pc/pages/query-template/components/query-config/query-config-creator.scss
+++ b/bkmonitor/webpack/src/monitor-pc/pages/query-template/components/query-config/query-config-creator.scss
@@ -22,7 +22,9 @@
     flex-wrap: wrap;
     align-items: center;
 
-    .template-metric-creator-component {
+    .template-metric-creator-component,
+    .template-dimension-creator-component,
+    .template-function-creator-component {
       flex: 1;
     }
 
