--- a/bkmonitor/webpack/src/monitor-pc/pages/query-template/components/function/function-creator.scss
+++ b/bkmonitor/webpack/src/monitor-pc/pages/query-template/components/function/function-creator.scss
@@ -15,6 +15,13 @@
     border-right: 1px solid #dcdee5;
   }
 
+  .placeholder {
+    padding: 0;
+    margin: 0;
+    line-height: 30px;
+    color: #C4C6CC;
+  }
+
   .tags-wrap {
     display: flex;
     flex-wrap: wrap;
@@ -42,93 +49,6 @@
       .icon-mc-close {
         margin-left: 4px;
         font-size: 16px;
-      }
-    }
-  }
-}
-
-.template-function-creator-component-popover {
-  display: flex;
-  flex-direction: column;
-  width: 578px;
-  height: 274px;
-  color: #63656e;
-  background: #fff;
-  border: 1px solid #dcdee5;
-  border-radius: 3px;
-  box-shadow: 0 2px 6px 0 rgb(0 0 0 / 10%);
-  opacity: 1;
-
-  .panel-search {
-    flex: 0 0 32px;
-    padding: 0 12px;
-  }
-
-  .panel-list {
-    display: flex;
-    flex: 1;
-    width: 100%;
-    max-height: 242px;
-    padding-top: 6px;
-
-    .panel-item {
-      display: flex;
-      flex: 0 0 128px;
-      flex-direction: column;
-      width: 128px;
-      padding: 6px 0;
-      overflow: auto;
-      border-right: 1px solid #dcdee5;
-
-      .list-item {
-        display: flex;
-        align-items: center;
-        width: 100%;
-        height: 32px;
-        min-height: 32px;
-        padding-left: 12px;
-        overflow: hidden;
-        text-overflow: ellipsis;
-        white-space: nowrap;
-
-        .arrow-icon {
-          display: flex;
-          align-items: center;
-          justify-content: center;
-          width: 24px;
-          height: 24px;
-          margin-left: auto;
-          font-size: 24px;
-        }
-
-        &.item-active,
-        &:hover {
-          color: #3a84ff;
-          cursor: pointer;
-          background-color: #f4f6fa;
-        }
-      }
-    }
-
-    .panel-desc {
-      display: flex;
-      flex: 1;
-      flex-direction: column;
-      height: 100%;
-      padding: 12px 10px;
-      color: #c4c6cc;
-
-      .desc-title {
-        display: flex;
-        flex: 0 0 32px;
-        align-items: center;
-        color: #63656e;
-      }
-
-      .desc-content {
-        display: flex;
-        flex: 1;
-        color: #c4c6cc;
       }
     }
   }
