--- a/bkmonitor/webpack/src/monitor-pc/pages/query-template/components/dimension/dimension-creator.scss
+++ b/bkmonitor/webpack/src/monitor-pc/pages/query-template/components/dimension/dimension-creator.scss
@@ -7,13 +7,14 @@
   border: 1px solid #dcdee5;
 
   .dimension-label {
+    display: flex;
+    align-items: center;
     align-self: stretch;
     padding: 0 8px;
     line-height: 30px;
     color: #313238;
     background: #ebeef5;
     border-right: 1px solid #dcdee5;
-
   }
   
   .tags-wrap {
