--- a/bkmonitor/webpack/src/monitor-pc/pages/query-template/components/function/function-creator.scss
+++ b/bkmonitor/webpack/src/monitor-pc/pages/query-template/components/function/function-creator.scss
@@ -7,6 +7,8 @@
   border: 1px solid #dcdee5;
 
   .function-label {
+    display: flex;
+    align-items: center;
     align-self: stretch;
     padding: 0 8px;
     line-height: 30px;
