feat: 优化变量类型数据结构

--- a/bkmonitor/webpack/src/monitor-pc/pages/query-template/variables/components/common-form/variable-common-form.scss
+++ b/bkmonitor/webpack/src/monitor-pc/pages/query-template/variables/components/common-form/variable-common-form.scss
@@ -2,32 +2,46 @@
   .bk-label {
     padding: 0;
     font-size: 12px;
-    color: #4D4F56;
+    color: #4d4f56;
     text-align: left;
   }
 
   .bk-form-item {
     margin-bottom: 16px;
-  }
 
-  .variable-name-input {
-    .bk-form-input,
-    .group-box {
-      border-color: #dc9db8 !important;
+    .variable-name-input {
+      .bk-form-input,
+      .group-box {
+        border-color: #dc9db8;
+      }
+
+      .bk-form-input {
+        color: #e54488;
+        background-color: #fef9fb !important;
+      }
+
+      .group-box {
+        background-color: #feeaf2;
+
+        .group-text {
+          padding: 0 8px;
+          color: #e54488;
+        }
+      }
     }
 
-    .bk-form-input {
-      color: #E54488;
-      background-color: #FEF9FB !important;
+    &.variable-name-form-item {
+      .bk-form-input:focus {
+        border-color: #dc9db8 !important;
+      }
     }
 
-    .group-box {
-      background-color: #feeaf2;
-
-      .group-text {
-        padding: 0 8px;
-        color: #E54488;
+    .bk-form-content {
+      .tooltips-icon {
+        right: 30px !important;
       }
     }
   }
+
+
 }
