--- a/bkmonitor/webpack/src/monitor-pc/pages/query-template/variables/components/variable-panel/variable-panel.scss
+++ b/bkmonitor/webpack/src/monitor-pc/pages/query-template/variables/components/variable-panel/variable-panel.scss
@@ -29,7 +29,6 @@
   &.detail {
     display: flex;
 
-    
     & + .variable-panel {
       margin-top: 8px;
     }
@@ -41,5 +40,32 @@
     .variable-form {
       padding: 6px 0;
     }
+  }
+}
+
+.variable-value {
+  display: flex;
+  align-items: center;
+  width: 240px;
+  margin: 8px 0;
+
+  .variable-value-label {
+    height: 32px;
+    padding: 0 9px 0 8px;
+    line-height: 32px;
+    background: #ebeef5;
+    border: 1px solid #dcdee5;
+    border-right: none;
+    border-radius: 2px 0 0 2px;
+
+    span {
+      cursor: pointer;
+      border-bottom: 1px dashed #c4c6cc;
+    }
+  }
+
+  .variable-value-input {
+    flex: 1;
+    background-color: #fff;
   }
 }
