feat: 低分辨率模式 UI # Reviewed, transaction id: 54040

--- a/bklog/web/src/views/retrieve-v3/index.scss
+++ b/bklog/web/src/views/retrieve-v3/index.scss
@@ -84,6 +84,42 @@
       }
     }
   }
+  .low-resolution-show{
+    display: none;
+  }
+  @media (max-width: 1366px) {
+    .search-bar-container .search-options {
+      width: 44px;
+      color: #313238;;
+    }
+    .search-bar-wrapper .search-bar-container .search-options .low-resolution-hide{
+      display: none;
+    }
+    .search-bar-wrapper .search-bar-container .search-options .low-resolution-show{
+      display: inline-block;
+    }
+
+    .low-resolution-hide{
+      display: none;
+    }
+
+    .low-resolution-show{
+      display: block;
+    }
+
+    .box-right-option {
+      .low-resolution-icon {
+        width: 40px;
+        padding: 0;
+        margin: 0;
+
+        .bklog-icon{
+          margin: 0;
+        }
+      }
+    }
+  }
+
 }
 
 .is-start-text-ellipsis {
