feat: 查询模版配置开发

--- a/bkmonitor/webpack/src/monitor-pc/pages/query-template/components/expression-panel/expression-panel.scss
+++ b/bkmonitor/webpack/src/monitor-pc/pages/query-template/components/expression-panel/expression-panel.scss
@@ -15,6 +15,10 @@
   }
 
   .template-expression-panel-desc {
+    margin-top: 3px;
+    margin-left: 79px;
+    font-size: 12px;
+    line-height: 20px;
     color: #979BA5;
   }
 }
