--- a/bklog/web/src/views/retrieve-v2/search-bar/index.scss
+++ b/bklog/web/src/views/retrieve-v2/search-bar/index.scss
@@ -25,6 +25,9 @@
         color: #313238;
       }
 
+      .mode-icon {
+        display: none;
+      }
       .bklog-qiehuan-2 {
         margin-left: 4px;
         color: #4d4f56;
