--- a/bkmonitor/webpack/src/monitor-pc/pages/query-template/components/utils/select-wrap.scss
+++ b/bkmonitor/webpack/src/monitor-pc/pages/query-template/components/utils/select-wrap.scss
@@ -42,6 +42,24 @@
     }
   }
 
+  .clear-wrap {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 32px;
+    height: 100%;
+    margin: 0 0 0 auto;
+
+    .icon-mc-close-fill {
+      font-size: 14px;
+      color: #c4c6cc;
+
+      &:hover {
+        color: #979ba5;
+      }
+    }
+  }
+
   .select-loading {
     position: absolute;
     top: 0;
