--- a/bkmonitor/webpack/src/monitor-pc/pages/query-template/variables/components/variable-panel/variable-panel.scss
+++ b/bkmonitor/webpack/src/monitor-pc/pages/query-template/variables/components/variable-panel/variable-panel.scss
@@ -40,32 +40,25 @@
     .variable-form {
       padding: 6px 0;
     }
-  }
-}
 
-.variable-value {
-  display: flex;
-  align-items: center;
-  width: 240px;
-  margin: 8px 0;
+    .tag-list {
+      display: flex;
+      flex-wrap: wrap;
 
-  .variable-value-label {
-    height: 32px;
-    padding: 0 9px 0 8px;
-    line-height: 32px;
-    background: #ebeef5;
-    border: 1px solid #dcdee5;
-    border-right: none;
-    border-radius: 2px 0 0 2px;
+      .tag-item {
+        height: 22px;
+        padding: 0 4px;
+        margin-top: 2px;
+        font-size: 12px;
+        line-height: 22px;
+        color: #4d4f56;
+        background: #f0f1f5;
+        border-radius: 2px;
 
-    span {
-      cursor: pointer;
-      border-bottom: 1px dashed #c4c6cc;
+        & + .tag-item {
+          margin-left: 2px;
+        }
+      }
     }
-  }
-
-  .variable-value-input {
-    flex: 1;
-    background-color: #fff;
   }
 }
