--- a/bkmonitor/webpack/src/monitor-pc/pages/query-template/components/utils/select-wrap.scss
+++ b/bkmonitor/webpack/src/monitor-pc/pages/query-template/components/utils/select-wrap.scss
@@ -4,6 +4,7 @@
   flex: 1;
   align-items: center;
   height: 100%;
+  min-height: 30px;
   padding: 0 0 0 6px;
   cursor: pointer;
   background: #FDF4E8;
