--- a/bkmonitor/webpack/src/monitor-pc/pages/query-template/components/basic-info/basic-info.scss
+++ b/bkmonitor/webpack/src/monitor-pc/pages/query-template/components/basic-info/basic-info.scss
@@ -16,10 +16,22 @@
     .basic-info-form {
       display: flex;
       flex-wrap: wrap;
-      
+
       .bk-form-item {
         padding-right: 24px;
         margin-top: 16px;
+      }
+    }
+
+    .bk-tag-input {
+      .tag {
+        .tag-name {
+          vertical-align: middle;
+        }
+
+        .icon-monitor {
+          vertical-align: middle;
+        }
       }
     }
   }
