feat: 新建查询面板功能修复

--- a/bkmonitor/webpack/src/monitor-pc/pages/query-template/create/template-create.scss
+++ b/bkmonitor/webpack/src/monitor-pc/pages/query-template/create/template-create.scss
@@ -94,7 +94,7 @@
       }
 
       .create-view {
-        height: 100%;
+        height: calc(100% - 52px);
         padding: 16px 16px 0;
 
         .variable-form {
