fix: 日志聚类测试问题修复 --Bug=146994949 # Reviewed, transaction id: 54655

--- a/bklog/web/src/components/rule-table/add-rule/index.scss
+++ b/bklog/web/src/components/rule-table/add-rule/index.scss
@@ -24,10 +24,10 @@
         font-size: 18px;
       }
 
-      .spin {
-        position: absolute;
-        top: 2px;
-      }
+      // .spin {
+      //   position: absolute;
+      //   top: 2px;
+      // }
     }
 
     .btns-main {
