--- a/bklog/web/src/views/retrieve-v3/search-result/log-clustering/log-table/content-table/cluster-popover/regex-match/regex-table/index.scss
+++ b/bklog/web/src/views/retrieve-v3/search-result/log-clustering/log-table/content-table/cluster-popover/regex-match/regex-table/index.scss
@@ -86,6 +86,11 @@
             &:hover {
               color: #979ba5;
             }
+
+            &.is-disabled {
+              color: #dcdee5;
+              cursor: not-allowed;
+            }
           }
         }
       }
