--- a/bklog/web/src/views/retrieve-v3/search-result/log-clustering/log-table/index.scss
+++ b/bklog/web/src/views/retrieve-v3/search-result/log-clustering/log-table/index.scss
@@ -3,11 +3,14 @@
   flex-direction: column;
   font-size: 12px;
   position: relative;
-  // overflow: hidden;
 
   .table-list-content {
     flex: 1;
     overflow-y: auto;
+
+    .bk-loading {
+      z-index: 0 !important;
+    }
   }
 
   .global-scrollbar-wraper {
