--- a/bkmonitor/webpack/src/monitor-pc/pages/query-template/components/condition/value-tag-selector.scss
+++ b/bkmonitor/webpack/src/monitor-pc/pages/query-template/components/condition/value-tag-selector.scss
@@ -43,4 +43,45 @@
       color: #c4c6cc;
     }
   }
+  .variable-tag {
+    position: relative;
+    display: inline-flex;
+    align-items: center;
+    max-width: 100%;
+    min-height: 22px;
+    padding: 2px 4px;
+    margin: 0 4px 4px 0;
+    overflow: hidden;
+    font-size: 12px;
+    background: #f0f1f5;
+    border: 1px solid transparent;
+    border-radius: 2px;
+
+    .value-span {
+      overflow: hidden;
+      line-height: 12px;
+      color: #63656e;
+      word-break: break-all;
+      cursor: pointer;
+    }
+
+    .icon-mc-close {
+      margin-left: 4px;
+      font-size: 16px;
+      color: #979ba5;
+      cursor: pointer;
+    }
+    &:hover {
+      cursor: pointer;
+      background-color: #dcdee5;
+      border-color: #dcdee5;
+    }
+    &.one-row {
+      .value-span {
+        text-overflow: ellipsis;
+        word-break: normal;
+        white-space: nowrap;
+      }
+    }
+  }
 }
