--- a/bkmonitor/webpack/src/monitor-pc/pages/query-template/components/query-template-view/query-template-view.scss
+++ b/bkmonitor/webpack/src/monitor-pc/pages/query-template/components/query-template-view/query-template-view.scss
@@ -20,7 +20,15 @@
 
     .template-view {
       width: 482px;
+      padding: 12px 16px;
       background: #fff;
+
+      .template-view-header {
+        margin-bottom: 12px;
+        font-size: 16px;
+        line-height: 24px;
+        color: #313238;
+      }
     }
   }
 
