feat: 查询模板-图表功能开发 --Story=126734974 # Reviewed, transaction id: 54913

--- a/bkmonitor/webpack/src/monitor-pc/pages/query-template/components/query-template-view/query-template-view.scss
+++ b/bkmonitor/webpack/src/monitor-pc/pages/query-template/components/query-template-view/query-template-view.scss
@@ -9,12 +9,19 @@
     .left-view-container {
       flex: 1;
       height: 100%;
-      padding: 16px 16px 0;
+      padding: 16px;
       overflow-y: auto;
 
       .content-wrap {
-        height: 100%;
+        display: flex;
+        flex-direction: column;
+        height: fit-content;
+        min-height: 100%;
         padding: 16px;
+
+        .edit-variable-wrap {
+          margin-bottom: 16px;
+        }
       }
     }
 
