--- a/bkmonitor/webpack/src/monitor-pc/pages/query-template/query-chart/query-chart.scss
+++ b/bkmonitor/webpack/src/monitor-pc/pages/query-template/query-chart/query-chart.scss
@@ -1,8 +1,9 @@
 .query-chart {
   display: flex;
+  flex: 1;
   flex-direction: column;
   width: 100%;
-  height: 100%;
+  min-height: 300px;
 
   &-header {
     display: flex;
