--- a/bkmonitor/webpack/src/monitor-pc/pages/query-template/components/utils/add-variable-wrap.scss
+++ b/bkmonitor/webpack/src/monitor-pc/pages/query-template/components/utils/add-variable-wrap.scss
@@ -1,7 +1,7 @@
 .template-config-options-add-variable-option-pop {
   width: 258px;
-  height: 116px;
-  padding: 8px 12px 0 8px;
+  min-height: 116px;
+  padding: 8px 12px 12px 8px;
   background: #FFF;
   border: 1px solid #DCDEE5;
   box-shadow: 0 2px 6px 0 #0000001a;
@@ -36,5 +36,9 @@
     .confirm-btn {
       margin: 0 8px 0 auto;
     }
+  }
+  .error-tip {
+    color: #E71818;
+    margin-top: 4px;
   }
 }
