--- a/bkmonitor/webpack/src/monitor-pc/pages/query-template/components/query-template-view/query-template-view.scss
+++ b/bkmonitor/webpack/src/monitor-pc/pages/query-template/components/query-template-view/query-template-view.scss
@@ -26,6 +26,8 @@
     }
 
     .template-view {
+      display: flex;
+      flex-direction: column;
       width: 482px;
       padding: 12px 16px;
       background: #fff;
@@ -35,6 +37,10 @@
         font-size: 16px;
         line-height: 24px;
         color: #313238;
+      }
+
+      .template-config-view {
+        overflow-y: auto;
       }
     }
   }
