--- a/bkmonitor/webpack/src/monitor-pc/pages/query-template/components/utils/add-variable-wrap.scss
+++ b/bkmonitor/webpack/src/monitor-pc/pages/query-template/components/utils/add-variable-wrap.scss
@@ -1,7 +1,7 @@
 .template-config-options-add-variable-option-pop {
   width: 258px;
   min-height: 116px;
-  padding: 8px 12px 12px 8px;
+  padding: 8px 12px 12px;
   background: #FFF;
   border: 1px solid #DCDEE5;
   box-shadow: 0 2px 6px 0 #0000001a;
@@ -15,13 +15,25 @@
 
   .header-title {
     line-height: 20px;
-    color: #4D4F56;
 
-    .red-point {
-      margin-left: 6px;
-      color: #EA3636;
-      
+    .header-title-name {
+      position: relative;
+      color: #4D4F56;
+
+      &::after {
+        position: absolute;
+        top: 50%;
+        display: inline-block;
+        height: 8px;
+        font-size: 12px;
+        line-height: 1;
+        vertical-align: middle;
+        color: #ea3636;
+        content: "*";
+        transform: translate(5px, -50%);
+      }
     }
+    
   }
 
   .var-input {
@@ -37,8 +49,9 @@
       margin: 0 8px 0 auto;
     }
   }
+
   .error-tip {
-    color: #E71818;
     margin-top: 4px;
+    color: #E71818;
   }
 }
