--- a/bkmonitor/webpack/src/monitor-pc/pages/query-template/components/utils/variable-name-input.scss
+++ b/bkmonitor/webpack/src/monitor-pc/pages/query-template/components/utils/variable-name-input.scss
@@ -1,3 +1,4 @@
+/* stylelint-disable no-descending-specificity */
 .template-config-variable-name-input {
   position: relative;
   display: flex;
@@ -6,31 +7,30 @@
   width: 100%;
   height: 30px;
   background: #FEF9FB;
-  
   border-radius: 2px;
 
   .label-left, .label-right {
     display: flex;
+    align-items: center;
     justify-content: center;
     width: 28px;
     height: 100%;
-    line-height: 30px;
     color: #313238;
     background: #F5F7FA;
   }
 
   .label-left {
     width: 28px;
+    margin-right: -1px;
     border: 1px solid #C4C6CC;
     border-right: none;
-    margin-right: -1px;
   }
 
   .label-right {
     width: 21px;
+    margin-left: -1px;
     border: 1px solid #C4C6CC;
     border-left: none;
-    margin-left: -1px;
   }
 
   .variable-name-input {
@@ -50,6 +50,7 @@
       }
     }
   }
+
   &.is-err {
     .variable-name-input {
       .bk-form-input {
